# vec

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: pipeline.yaml
examples/: CMakeLists.txt  main.cpp
include/: stack-forward.h  stack.h  vec-forward.h  vec.full.h  vec.h
include/internal/: concepts.h  define.h
include/iterator/: iterator-forward.h  iterator.h
test/: CMakeLists.txt  main.cpp
test/exception_safety/: main.cpp
test/iterator/: main.cpp
test/type/: main.cpp
test/utils /: none_default_constructible.cpp  none_default_constructible.h  throwing_default_constructor.cpp  throwing_default_constructor.h
